k8s/overlays/eks-production/patch-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  namespace: rental
spec:
  replicas: 3
  template:
    spec:
      containers:
        - name: api
          imagePullPolicy: Always
