k8s/overlays/eks-production/patch-client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  namespace: rental
spec:
  replicas: 3
  template:
    spec:
      containers:
        - name: client
          imagePullPolicy: Always
