k8s/overlays/eks-production/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rental-ingress
  namespace: rental
spec:
  ingressClassName: nginx
  rules:
    - host: ae3b0296de3e84446aba612ab8ecb1ea-817453542.us-east-1.elb.amazonaws.com
      http:
        paths:
          - path: /healthz
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 80
          - path: /readyz
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-service
                port:
                  number: 80
